# -

./: CMakeLists.txt
FinalWork/: FinalWork.pro  activitywidget.cpp  activitywidget.h  activitywidget.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdialog.cpp  mapdialog.h  mapdialog.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  showcourseinfo.cpp  showcourseinfo.h  showcourseinfo.ui  timetabledialog.cpp  timetabledialog.h  timetabledialog.ui
build-FinalWork-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  allhomework.txt  allmaterialinfo.txt  object_script.FinalWork.Debug  object_script.FinalWork.Release  ui_activitywidget.h  ui_logindialog.h  ui_mainwindow.h  ui_mapdialog.h  ui_registerdialog.h  ui_showcourseinfo.h  ui_timetabledialog.h
build-FinalWork-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_activitywidget.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_map.cpp  moc_mapdialog.cpp  moc_registerdialog.cpp  moc_showcourseinfo.cpp  moc_timetabledialog.cpp
mapPicture/: images.qrc
src/: AfterActivity.cpp  AfterActivity.h  Alarm.cpp  Alarm.h  Cache.cpp  Cache.h  Compress.cpp  Compress.h  ConflictCheck.cpp  ConflictCheck.h  CourseInformation.cpp  CourseInformation.h  CourseTime.cpp  CourseTime.h  MyTime.cpp  MyTime.h  README  Request.cpp  Request.h  Response.cpp  Response.h  StringExtendMethod.cpp  StringExtendMethod.h  UserInfo.cpp  UserInfo.h  allEnum.h  map.cpp  map.h
userinfo/: usernamepassword.txt
userinfo/admin/log/: time.txt
(+2 files in other folders)
